// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleStandfirst should be able to asborb an injected style 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "black",
      "borderBottomWidth": 0.5,
      "borderColor": "#dcdcdc",
      "paddingHorizontal": 12,
      "paddingTop": 6,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GuardianTextEgyptian-Reg",
          "fontSize": 17,
          "lineHeight": 21,
        },
        Array [
          Object {
            "color": "#121212",
          },
          Object {},
        ],
      ]
    }
  >
    This is a test Standfirst
  </Text>
  <View
    style={
      Array [
        Object {
          "marginBottom": 12,
          "marginTop": 12,
          "paddingTop": 3,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dcdcdc",
        },
        Object {
          "alignContent": "stretch",
          "alignItems": "stretch",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={12}
      bbWidth="100%"
      fill="none"
      height={12}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          null,
          Object {
            "flex": 0,
            "height": 12,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup
        fill={null}
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      >
        <RNSVGRect
          fill={
            Array [
              0,
              4279374354,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          height={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          rx={0}
          ry={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          width="100%"
          x={0}
          y={0}
        />
        <RNSVGRect
          fill={
            Array [
              0,
              4279374354,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          height={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          rx={0}
          ry={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          width="100%"
          x={0}
          y={3}
        />
        <RNSVGRect
          fill={
            Array [
              0,
              4279374354,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          height={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          rx={0}
          ry={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          width="100%"
          x={0}
          y={6}
        />
        <RNSVGRect
          fill={
            Array [
              0,
              4279374354,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          height={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          rx={0}
          ry={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          width="100%"
          x={0}
          y={9}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GuardianTextEgyptian-Reg",
            "fontSize": 17,
            "lineHeight": 21,
          },
          Array [
            Object {
              "color": "#121212",
            },
            Object {},
          ],
          Object {
            "fontFamily": "GuardianTextEgyptian-Bold",
          },
        ]
      }
    >
      Byline McJournalist
    </Text>
  </View>
</View>
`;

exports[`ArticleStandfirst should display a default Standfirst 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderBottomWidth": 0.5,
      "borderColor": "#dcdcdc",
      "paddingHorizontal": 12,
      "paddingTop": 6,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GuardianTextEgyptian-Reg",
          "fontSize": 17,
          "lineHeight": 21,
        },
        Array [
          Object {
            "color": "#121212",
          },
          Object {},
        ],
      ]
    }
  >
    This is a test Standfirst
  </Text>
  <View
    style={
      Array [
        Object {
          "marginBottom": 12,
          "marginTop": 12,
          "paddingTop": 3,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dcdcdc",
        },
        Object {
          "alignContent": "stretch",
          "alignItems": "stretch",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={12}
      bbWidth="100%"
      fill="none"
      height={12}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          null,
          Object {
            "flex": 0,
            "height": 12,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup
        fill={null}
        fillOpacity={1}
        fillRule={1}
        font={Object {}}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      >
        <RNSVGRect
          fill={
            Array [
              0,
              4279374354,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          height={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          rx={0}
          ry={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          width="100%"
          x={0}
          y={0}
        />
        <RNSVGRect
          fill={
            Array [
              0,
              4279374354,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          height={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          rx={0}
          ry={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          width="100%"
          x={0}
          y={3}
        />
        <RNSVGRect
          fill={
            Array [
              0,
              4279374354,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          height={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          rx={0}
          ry={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          width="100%"
          x={0}
          y={6}
        />
        <RNSVGRect
          fill={
            Array [
              0,
              4279374354,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          height={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          rx={0}
          ry={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          width="100%"
          x={0}
          y={9}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        Array [
          Object {
            "flexShrink": 0,
            "fontFamily": "GuardianTextEgyptian-Reg",
            "fontSize": 17,
            "lineHeight": 21,
          },
          Array [
            Object {
              "color": "#121212",
            },
            Object {},
          ],
          Object {
            "fontFamily": "GuardianTextEgyptian-Bold",
          },
        ]
      }
    >
      Byline McJournalist
    </Text>
  </View>
</View>
`;
